--- a/core/templates/core/respostas.html
+++ b/core/templates/core/respostas.html
@@ -1,9 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Respostas</title>
+    <link rel="stylesheet" href="{% static '/core/css/respostas.css' %}">
   </head>
   <body>
     <h1>Respostas</h1>
@@ -19,7 +22,7 @@
 
       <h2>Questão B</h2>
       <section>
-        <h3>Livros com a tag 'Ciência'</h3>
+        <h3>Livros com a tag "Ciência"</h3>
         <ol>
           {% for livro in livros_com_tag_especifica %}
             <li>{{ livro.title }}</li>
@@ -87,7 +90,7 @@
       <section>
         <ol>
           {% for avaliacao in avaliacoes_livro_autor_especifico %}
-            <li>{{ avaliacao.book.title }} ({{ avaliacao.book.author.name }}): {{ avaliacao.review_text }}</li>
+            <li><b>{{ avaliacao.book.title }} ({{ avaliacao.book.author.name }}):</b> {{ avaliacao.review_text }}</li>
           {% endfor %}
         </ol>
       </section>
